Bugfix for collapsed nav styles

--- a/grid-parts/styles/navigation/styles-collapsed.scss
+++ b/grid-parts/styles/navigation/styles-collapsed.scss
@@ -66,7 +66,7 @@
 		&.toggled-on {
 			background: none;
 			box-shadow: none;
-			color: currentColor;
+			// color: currentColor;
 
 			svg {
 				fill: currentColor;
@@ -77,7 +77,7 @@
 			&:focus,
 			&.focus,
 			&.toggled-on {
-				outline: 1px dotted;
+				// outline: 1px dotted;
 			}
 		}
 
